Fix: Book Now button style change to be visible

--- a/Image-Gallery/style.css
+++ b/Image-Gallery/style.css
@@ -150,14 +150,15 @@ body {
   padding-left: 20px;
   padding-right: 20px;
   width: auto;
-  background-color: transparent;
-  border: 2px solid var(--btn-border);
-  color: var(--btn-color);
+  background-color: slateblue;
+  border: 2px solid #00dbc7;
+  color: #FFD700;
   font-weight: 500;
   font-size: 14px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   vertical-align: middle;
   text-decoration: none;
+  box-shadow: 6px 4px 9px 1px #108cd5;
   white-space: nowrap;
 }
 .btn-style:hover {
